# mlops-pipeline-challenge

./: .dockerignore  .gitignore  ATIVIDADE.md  ATTRIBUTION.md  Dockerfile  Dockerfile.train  NOTION_ATIVIDADE.md  README.md  architecture_flow.md  docker-compose.yml  pyproject.toml  relatorio.md
scripts/: demo_compose.ps1  demo_compose.sh  demo_pipeline.ps1  demo_pipeline.sh
src/: infer.py  prep_data.py  train.py
src/contracts/: messages.py
src/experiments/: json_to_dict_example.py  simple_dataset_consumer.py  simple_dataset_publisher.py
src/messaging/: rabbitmq.py
src/tools/: check_inference_status.py  get_inference_result.py  publish_data_build.py  publish_infer_request.py
src/workers/: collect_worker_fake.py  collect_worker_real.py  data_worker_fake.py  data_worker_real.py  infer_worker_fake.py  infer_worker_real.py  oracle_annotation_worker.py  train_worker_fake.py  train_worker_real.py
