[project]
name = "mlops-pipeline-challenge"
version = "0.1.0"
description = "Starter kit — desafio de pipeline de MLOps (detector BCCD)"
requires-python = ">=3.12"

# Inferência (leve — sem torch)
dependencies = [
    "onnxruntime>=1.17.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pika>=1.4.1",
    "pydantic>=2.13.4",
]

[dependency-groups]
train = []

[tool.uv]
default-groups = []
